# esp32c3-vfd-clock

./: Cargo.toml
src/: main.rs
vfd-8md06inkm/: Cargo.toml
vfd-8md06inkm/src/: lib.rs
