[package]
name = "esp32c3-vfd-clock"
version = "0.1.0"
authors = ["Chiro Liang <Chiro2001@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.1", features = [
    "esp32c3",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "async",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.4.0", features = [
    "esp32c3",
    "phy-enable-usb",
    "utils",
    "wifi-default",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
fugit = "0.3.7"
embedded-hal = "1.0.0"
vfd-8md06inkm = { path = "vfd-8md06inkm" }
embassy-embedded-hal = { version = "0.1.0", features = ["time"] }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
